# simulations

./: README.md  main.py  pyproject.toml
src/models/: base.py  extensions.py  sir.py  sird.py
src/scenarios/: data.py
src/simulation_game/: agent.py  game.py  web_sim.py
src/solvers/: ode_solver.py
src/ui/: layout.py
src/visualization/: charts.py  dag.py
tests/: test_game.py  test_metrics.py  test_models.py  test_scenarios.py
