[project]
name = "simulations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "graphviz>=0.21",
    "numpy>=2.0.2",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pygame>=2.6.1",
    "scipy>=1.13.1",
    "streamlit>=1.50.0",
]
